--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Churros Rellenos | Catálogo</title>
 
   <Style>
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+
     /* RESET BÁSICO */
 * {
   margin: 0;
@@ -36,8 +39,15 @@ body {
 }
 
 .header h1 {
-  font-size: 1.4rem;
+  font-family:"Lobster", sans-serif;
+  font-style: normal;
+  font-size: 3rem;
   font-weight: 700;
+
+}
+
+.header img{
+  height: 7rem;
 }
 
 .header p {
@@ -126,7 +136,9 @@ document.querySelectorAll("button").forEach(btn => {
   <!-- HEADER -->
   <header class="header">
     <h1>Churros Rellenos</h1>
-    <p>Gruesos • Recién hechos • Azúcar & relleno</p>
+    <img src="img/Recurso 1.svg" alt="Logo">
+    <p>"!DICEN QUE ESTAN BUENOS! ¿ SAABEEEE ?"</p>
+    <p>"Hechos al momento y a tu gusto"</p>
   </header>
 
   <!-- CATÁLOGO -->
